...
                    android:id="@+id/imageButton_recipe_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="10dp" />

                <EditText
                    android:id="@+id/editText_recipe_title_create_recipe_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/enter_recipe_title"
                    android:inputType="textPersonName"
...
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <CheckBox
                        android:id="@+id/checkBox_publish_create_recipe_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{createRecipeViewModel.tagCheckBoxPublish}"
                        android:text="@string/publish" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_create_recipe_and_goto_RecipeList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
...
